✨ feat: 添加布局页面

--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -1,2 +1,12 @@
 // 为项目提供scss全局变量
 $p-color: #8899ff;
+
+// 左侧菜单
+$base-menu-width: 260px;
+$base-menu-bg: #001529;
+
+$base-menu-logo-height: 50px;
+$base-menu-logo-title-fz: 22px;
+
+// 顶部导航
+$base-tabbar-height: 50px;
