--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,2 +1,15 @@
 // 引入清除默认样式
 @import './reset.scss';
+
+// 滚动条样式
+::-webkit-scrollbar {
+  width: 10px;
+}
+::-webkit-scrollbar-track {
+  background-color: $base-menu-bg;
+}
+::-webkit-scrollbar-thumb {
+  width: 10px;
+  border-radius: 6px;
+  background-color: #ccc;
+}
