--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -3,6 +3,7 @@ $p-color: #8899ff;
 
 // 左侧菜单
 $base-menu-width: 260px;
+$base-menu-min-width: 64px;
 $base-menu-bg: #001529;
 
 $base-menu-logo-height: 50px;
