✨ feat: 使用真是接口替换mock

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,3 +13,7 @@
   border-radius: 6px;
   background-color: #ccc;
 }
+
+#nprogress .bar {
+  background-image: linear-gradient(to right, red, orange) !important;
+}
